--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "engines": {
-"node": "v22.17.0"
+"node": "22.17.0"
   },
   "name": "majorproject",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
